<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- 标题  -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:background="#02b4f5"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <!-- WiFi模块IP -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_wifi_ip"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edtIP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/edt_background"
                android:ems="10">

                <requestFocus />
            </EditText>

        </LinearLayout>
        <!-- 网络端口 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_net_port"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/edt_background"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <!-- 按钮——连接 wifi 设备  -->
        <Button
            android:id="@+id/btnConnect"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:text="@string/btn_connect_device"
            android:background="@drawable/btn_background"
            android:textColor="#ffffff"/>

        <!--分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1195db"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >
            <TextView
                android:id="@+id/tvTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_humidity"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center" >

            <Button
                android:id="@+id/btnStartAuto"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/btn_auto_control"
                android:background="@drawable/btn_background"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/btnStartManual"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/btn_manual_control"
                android:background="@drawable/btn_background"
                android:layout_marginLeft="10dp"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/btnStop"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/btn_stop"
                android:background="@drawable/btn_background"
                android:layout_marginLeft="10dp"
                android:textColor="#ffffff"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_up_down"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_humidity_down"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtTempLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_background"
                android:layout_marginLeft="10dp"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_humidity_up"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtTempHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_background"
                android:layout_marginLeft="10dp"
                android:ems="10" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSetup"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btn_set"
            android:layout_marginLeft="5dp"
            android:background="@drawable/btn_background"
            android:textColor="#ffffff"/>
        <!--分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#1195db"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp" >

            <Button
                android:id="@+id/btnManualHot"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/btn_start_water"
                android:background="@drawable/btn_background"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/btnManualHotStop"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_background"
                android:textColor="#ffffff"
                android:text="@string/btn_close_water" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <!-- 提示的文本 -->
            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
